WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315317
REGRESSION(
310189@main
): Occasional UI process crash under DisplayLink callbacks (SwipeProgressTracker can fail to deregister from DisplayLink)
https://bugs.webkit.org/show_bug.cgi?id=315317
Summary
REGRESSION(310189@main): Occasional UI process crash under DisplayLink callba...
Abrar Rahman Protyasha
Reported
2026-05-21 13:26:44 PDT
rdar://177623797
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-21 13:42:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65434
EWS
Comment 2
2026-05-21 18:21:42 PDT
Committed
313698@main
(63ac45d3bc31): <
https://commits.webkit.org/313698@main
> Reviewed commits have been landed. Closing PR #65434 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug